projects :white_check_mark:

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -94,38 +94,40 @@
                     focused on the client's opportunity with versatility, collaboration, innovation, and creativity. The
                     company, which started its work in 2019, has more than 30 employees and currently has partnerships
                     with companies Sonae BIT, Critical Manufacturing, ZOS Lda and Escola Global.</p>
-            </div>
 
-            <div class="row" id="about-cards">
-                <div class="col-lg-4 col-md-12">
-                    <div class="card">
-                        <img class="img-fluid" src="assets/SoftwareEngineering.svg" alt="software-image">
-                        <div class="card-body">
-                            <h5 class="card-title">Software Engineering</h5>
-                            <p class="card-text">Software development with Agile methodology, focused on process
-                                optimization, concept, definition, design, testing, implementation, and quality.
-                            </p>
+                <div class="row" id="about-cards">
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="card">
+                            <img class="img-fluid" src="assets/SoftwareEngineering.svg" alt="software-image">
+                            <div class="card-body">
+                                <h5 class="card-title">Software Engineering</h5>
+                                <p class="card-text">Software development with Agile methodology, focused on process
+                                    optimization, concept, definition, design, testing, implementation, and quality.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-12">
-                    <div class="card">
-                        <img class="img-fluid" src="assets/Business.svg" alt="business-image">
-                        <div class="card-body">
-                            <h5 class="card-title">Business</h5>
-                            <p class="card-text">Business management in model canvas, process mapping, key performance
-                                indicators, business plan, and responsibility matrix.</p>
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="card">
+                            <img class="img-fluid" src="assets/Business.svg" alt="business-image">
+                            <div class="card-body">
+                                <h5 class="card-title">Business</h5>
+                                <p class="card-text">Business management in model canvas, process mapping, key
+                                    performance
+                                    indicators, business plan, and responsibility matrix.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-12">
-                    <div class="card">
-                        <img class="img-fluid" src="assets/Multimedia.svg" alt="multimedia-image">
-                        <div class="card-body">
-                            <h5 class="card-title">Multimedia</h5>
-                            <p class="card-text">Visual identities, illustration, animation, interfaces, user
-                                experience, social media, video production, interactive narratives, storyboarding and
-                                digital marketing.</p>
+                    <div class="col-lg-4 col-sm-12">
+                        <div class="card">
+                            <img class="img-fluid" src="assets/Multimedia.svg" alt="multimedia-image">
+                            <div class="card-body">
+                                <h5 class="card-title">Multimedia</h5>
+                                <p class="card-text">Visual identities, illustration, animation, interfaces, user
+                                    experience, social media, video production, interactive narratives, storyboarding
+                                    and
+                                    digital marketing.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -133,113 +135,83 @@
         </div>
 
         <!-- SOFIA IS HERE -->
-        <!---
-        <div class="content-wrap">
-            <div class="row">
-                <div class="col-12">
-                    <h1 class="title-purple">projects</h1>
+
+        <div id="projects" class="section">
+            <a id="Projects"></a>
+            <div class="container">
+                <h1>Projects</h1>
+                <div class="row">
+                    <div class="col-lg-6 col-md-12" data-aos="fade-right" data-aos-offset="300"
+                        data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                        <img class="img-fluid"
+                            src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                    </div>
+                    <div class="col-lg-6 col-md-12" data-aos="fade-left" data-aos-offset="300"
+                        data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                        <h2>Quaerere</h2>
+                        <p>Educational application project for students of Escola Global. The school is a reference in
+                            investing in innovative technology for teaching and in this project, students will be able
+                            to learn with quizzes and tutorials as well as teachers with the possibility of planning the
+                            lessons.</p>
+                        <button type="button" class="btn btn-primary">details</button>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-1"></div>
-                <div class="col-5 d-flex align-items-center" data-aos="fade-right" data-aos-offset="300"
-                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <img class="mx-auto d-block W-75 img-fluid"
-                        src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 order-lg-1 order-2" data-aos="fade-right" data-aos-offset="300"
+                        data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                        <h2>Out-of-Stock</h2>
+                        <p>A project proposed by Sonae Bit to optimize stock replenishment through a system that detects
+                            empty shelves, in order to avoid the bad appearance created by the lack of exposed products.
+                            The key point of the project was the use of machine learning as well as image analysis for
+                            recognition of the products and their absence.</p>
+                        <button type="button" class="btn btn-primary">details</button>
+                    </div>
+                    <div class="col-lg-6 col-md-12 order-lg-2 order-1" data-aos="fade-left" data-aos-offset="300"
+                        data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                        <img class="img-fluid"
+                            src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                    </div>
                 </div>
-                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-left" data-aos-offset="300"
-                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <div class="container justify-content-center align-self-center">
-                        <h2 class="title-purple">Quarere</h2>
-                        <p>
-                            TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus
-                            eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat
-                            iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit.
-                            Mauris non nulla vitae lectus tincidunt sollicitudin nec ut elit. Cras lobortis porttitor
-                            volutpat. Donec faucibus et metus nec iaculis.
+                <div class="row">
+                    <div class="col-lg-6 col-md-12" data-aos="fade-right" data-aos-offset="300"
+                        data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                        <img class="img-fluid"
+                            src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                    </div>
+                    <div class="col-lg-6 col-md-12" data-aos="fade-left" data-aos-offset="300"
+                        data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                        <h2>Electronic Failure Catalogue</h2>
+                        <p>The Critical Manufacturing project is based on the MES product, customized for device
+                            factories, semiconductors, among others. To improve this type of product, it is necessary
+                            that in each step there are errors detections, and so we produce an electronic catalog of
+                            errors/failures in which the worker can select by the machine or cell phone and then obtain
+                            a list with a report of all the bugs that will be sent to the office later.
                         </p>
                         <button type="button" class="btn btn-primary">details</button>
                     </div>
                 </div>
-                <div class="col-2"></div>
-            </div>
-        </div>
-        <div class="content-wrap">
-            <div class="row">
-                <div class="col-2"></div>
-                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-right" data-aos-offset="300"
-                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <div class="container justify-content-center align-self-center">
-                        <h2 class="title-purple">Sonae</h2>
-                        <p>
-                            TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus
-                            eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat
-                            iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit.
-                            Mauris non nulla vitae lectus tincidunt sollicitudin nec ut elit. Cras lobortis porttitor
-                            volutpat. Donec faucibus et metus nec iaculis.
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 order-lg-1 order-2" data-aos="fade-right" data-aos-offset="300"
+                        data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                        <h2>ZeroZero</h2>
+                        <p>Application that concentrates the streaming information of sporting events. The main purpose
+                            of the application is to enable the user to find out which streaming channels are
+                            transmitting a particular sporting event. We developed the product in partnership with
+                            ZeroZero that provided the necessary API for the execution of the project.
                         </p>
                         <button type="button" class="btn btn-primary">details</button>
                     </div>
-                </div>
-                <div class="col-5 d-flex align-items-center" data-aos="fade-left" data-aos-offset="300"
-                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <img class="mx-auto d-block W-75 img-fluid"
-                        src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
-                </div>
-                <div class="col-1"></div>
-            </div>
-        </div>
-        <div class="content-wrap">
-            <div class="row">
-                <div class="col-1"></div>
-                <div class="col-5 d-flex align-items-center" data-aos="fade-right" data-aos-offset="300"
-                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <img class="mx-auto d-block W-75 img-fluid"
-                        src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
-                </div>
-                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-left" data-aos-offset="300"
-                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <div class="container justify-content-center align-self-center">
-                        <h2 class="title-purple">Critical</h2>
-                        <p>
-                            TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus
-                            eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat
-                            iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit.
-                            Mauris non nulla vitae lectus tincidunt sollicitudin nec ut elit. Cras lobortis porttitor
-                            volutpat. Donec faucibus et metus nec iaculis.
-                        </p>
-                        <button type="button" class="btn btn-primary">details</button>
+                    <div class="col-lg-6 col-md-12 order-lg-2 order-1" data-aos="fade-left" data-aos-offset="300"
+                        data-aos-easing="ease-in-cubic" data-aos-duration="500">
+                        <img class="img-fluid"
+                            src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
                     </div>
                 </div>
-                <div class="col-2"></div>
-            </div>
-        </div>
-        <div class="content-wrap">
-            <div class="row">
-                <div class="col-2"></div>
-                <div class="col-4 d-flex h-100 pr-5" data-aos="fade-right" data-aos-offset="300"
-                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <div class="container justify-content-center align-self-center">
-                        <h2 class="title-purple">ZeroZero</h2>
-                        <p>
-                            TLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi nisl, mollis eget lacus
-                            eget, consequat pulvinar sapien. Donec tincidunt sed nibh et commodo. Aliquam placerat
-                            iaculis euismod. Phasellus arcu justo, scelerisque auctor placerat in, viverra non elit.
-                            Mauris non nulla vitae lectus tincidunt sollicitudin nec ut elit. Cras lobortis porttitor
-                            volutpat. Donec faucibus et metus nec iaculis.
-                        </p>
-                        <button type="button" class="btn btn-primary">details</button>
-                    </div>
-                </div>
-                <div class="col-5 d-flex align-items-center" data-aos="fade-left" data-aos-offset="300"
-                    data-aos-easing="ease-in-cubic" data-aos-duration="500">
-                    <img class="mx-auto d-block W-75 img-fluid"
-                        src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
-                </div>
-                <div class="col-1"></div>
             </div>
         </div>
 
+
+        <!---
         <div class="content content--related">
             
             <footer class="page-footer">
