--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -211,35 +211,28 @@
         </div>
 
 
-        <!---
-        <div class="content content--related">
-            
-            <footer class="page-footer">
-                <div class="d-flex justify-content-around align-items-center py-4">
+        <footer class="page-footer">
+            <div class="container">
+                <div class="d-flex align-items-center justify-content-between">
 
-                    <div class="footer-logo d-flex justify-content-center">
-                        <img src="assets/LogoFooter.png">
-                    </div>
+                    <img class="img" src="assets/LogoFooter.png">
 
-                    <div class="footer-info d-flex">
-                        <div class="footer-navigation mr-5">
-                            <h6 class="footer-title mb-3">navigation</h6>
-                            <p><a href="#!">home</a></p>
-                            <p><a href="#!">about us</a></p>
-                            <p><a href="#!">projects</a></p>
-                            <p><a href="#!">contact</a></p>
+                    <div class="footer-contact text-wrap">
+                        <h6>Contact</h6>
+                        <div class="d-flex align-items-center mb-2">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <p>R. Dr. Roberto Frias, 4200-465 <br> Porto, Portugal</p>
                         </div>
-
-                        <div class="footer-contact text-wrap">
-                            <h6 class="footer-title mb-3">contact</h6>
-                            <p>R. Dr. Roberto Frias, 4200-465 Porto, Portugal</p>
+                        <div class="d-flex align-items-center">
+                            <i class="fas fa-envelope"></i>
                             <p>contacto@feeka.com</p>
-                            <p>+351 928 249 321</p>
                         </div>
                     </div>
                 </div>
-            </footer>
-        </div> -->
+            </div>
+
+        </footer>
+
     </main>
     <script src="js/navbar.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
