--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -17,7 +17,6 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-
 </head>
 
 <body>
@@ -44,7 +43,7 @@
                         <a class="nav-link disabled" href="#">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="#Projects">Projects</a>
                     </li>
                     <li class="nav-item contact">
                         <a class="nav-link" href="#">Contact</a>
@@ -210,30 +209,30 @@
             </div>
         </div>
 
+    </main>
 
-        <footer class="page-footer">
-            <div class="container">
-                <div class="d-flex align-items-center justify-content-between">
+    <footer class="page-footer">
+        <div class="container">
+            <div class="d-flex align-items-center justify-content-between">
 
-                    <img class="img" src="assets/LogoFooter.png">
+                <img class="img" src="assets/LogoFooter.png">
 
-                    <div class="footer-contact text-wrap">
-                        <h6>Contact</h6>
-                        <div class="d-flex align-items-center mb-2">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>R. Dr. Roberto Frias, 4200-465 <br> Porto, Portugal</p>
-                        </div>
-                        <div class="d-flex align-items-center">
-                            <i class="fas fa-envelope"></i>
-                            <p>contacto@feeka.com</p>
-                        </div>
+                <div class="footer-contact text-wrap">
+                    <h6>Contact</h6>
+                    <div class="d-flex align-items-center mb-2">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>R. Dr. Roberto Frias, 4200-465 <br> Porto, Portugal</p>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <i class="fas fa-envelope"></i>
+                        <p>contacto@feeka.com</p>
                     </div>
                 </div>
             </div>
+        </div>
 
-        </footer>
+    </footer>
 
-    </main>
     <script src="js/navbar.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/anime.min.js"></script>
