Import assets and implement static shapes on desktop version

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -143,9 +143,9 @@
                     <div class="col-lg-6 col-md-12" data-aos="fade-right" data-aos-offset="300"
                         data-aos-easing="ease-in-cubic" data-aos-duration="500">
                         <img class="img-fluid"
-                            src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                            src="assets/Quaerere.svg"></img>
                     </div>
-                    <div class="col-lg-6 col-md-12" data-aos="fade-left" data-aos-offset="300"
+                    <div class="info col-lg-6 col-md-12" data-aos="fade-left" data-aos-offset="300"
                         data-aos-easing="ease-in-cubic" data-aos-duration="500">
                         <h2>Quaerere</h2>
                         <p>Educational application project for students of Escola Global. The school is a reference in
@@ -156,7 +156,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 col-md-12 order-lg-1 order-2" data-aos="fade-right" data-aos-offset="300"
+                    <div class="info col-lg-6 col-md-12 order-lg-1 order-2" data-aos="fade-right" data-aos-offset="300"
                         data-aos-easing="ease-in-cubic" data-aos-duration="500">
                         <h2>Out-of-Stock</h2>
                         <p>A project proposed by Sonae Bit to optimize stock replenishment through a system that detects
@@ -168,16 +168,16 @@
                     <div class="col-lg-6 col-md-12 order-lg-2 order-1" data-aos="fade-left" data-aos-offset="300"
                         data-aos-easing="ease-in-cubic" data-aos-duration="500">
                         <img class="img-fluid"
-                            src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                            src="assets/Sonae.svg"></img>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-12" data-aos="fade-right" data-aos-offset="300"
                         data-aos-easing="ease-in-cubic" data-aos-duration="500">
                         <img class="img-fluid"
-                            src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                            src="assets/CriticalManuf.svg"></img>
                     </div>
-                    <div class="col-lg-6 col-md-12" data-aos="fade-left" data-aos-offset="300"
+                    <div class="info col-lg-6 col-md-12" data-aos="fade-left" data-aos-offset="300"
                         data-aos-easing="ease-in-cubic" data-aos-duration="500">
                         <h2>Electronic Failure Catalogue</h2>
                         <p>The Critical Manufacturing project is based on the MES product, customized for device
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 col-md-12 order-lg-1 order-2" data-aos="fade-right" data-aos-offset="300"
+                    <div class="info col-lg-6 col-md-12 order-lg-1 order-2" data-aos="fade-right" data-aos-offset="300"
                         data-aos-easing="ease-in-cubic" data-aos-duration="500">
                         <h2>ZeroZero</h2>
                         <p>Application that concentrates the streaming information of sporting events. The main purpose
@@ -203,7 +203,7 @@
                     <div class="col-lg-6 col-md-12 order-lg-2 order-1" data-aos="fade-left" data-aos-offset="300"
                         data-aos-easing="ease-in-cubic" data-aos-duration="500">
                         <img class="img-fluid"
-                            src="http://www.criticalmanufacturing.com/uploads/resources/A_20140704152359.png"></img>
+                            src="assets/ZeroZero.svg"></img>
                     </div>
                 </div>
             </div>
