Added Firebase to our website

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -229,6 +229,20 @@
 
     </footer>
 
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBjFB_snwYLCRm8ARKpwpicZztr9F5Ka0A",
+        authDomain: "feeka-4b536.firebaseapp.com",
+        databaseURL: "https://feeka-4b536.firebaseio.com",
+        projectId: "feeka-4b536",
+        storageBucket: "feeka-4b536.appspot.com",
+        messagingSenderId: "532035995937"
+      };
+      firebase.initializeApp(config);
+    </script>
+    
     <script src="js/navbar.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/anime.min.js"></script>
