Implement smooth scroll to homepage and make contac button scroll to contact information

--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="#Projects">Projects</a>
                     </li>
                     <li class="nav-item contact">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#Contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -208,6 +208,7 @@
     </main>
 
     <footer class="page-footer">
+        <a id="Contact"></a>
         <div class="container">
             <div class="d-flex align-items-center justify-content-between">
 
