--- a/feeka-web/src/index.html
+++ b/feeka-web/src/index.html
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
 </head>
 
 <body>
